--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.3.1",
     "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.2",
+    "react-navigation": "^4.4.4",
     "react-redux": "^7.2.6",
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^6.2.1",
